--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -35,8 +35,10 @@
         android:layout_margin="16dp"
         android:background="@drawable/edit_text_style"
         android:elevation="2dp"
-        android:hint="Заголовок"
+        android:hint="@string/title"
         android:inputType="textPersonName"
+        android:lines="1"
+        android:maxLines="1"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +63,7 @@
         android:background="@drawable/edit_text_style"
         android:elevation="2dp"
         android:gravity="start|top"
-        android:hint="Ваша статья..."
+        android:hint="@string/your_text"
         android:inputType="textMultiLine"
         android:padding="17dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:text="Поделитесь с другими что-то интересное"
+        android:text="@string/share_your_text"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
