--- a/app/src/main/res/layout/chapter_item.xml
+++ b/app/src/main/res/layout/chapter_item.xml
@@ -1,11 +1,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chapterBtn"
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:layout_margin="12dp"
-    android:background="@drawable/life_item_style"
+    android:background="@drawable/clear_item"
     android:elevation="8dp"
     android:paddingStart="24dp"
     android:paddingEnd="4dp"
