--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,7 +24,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="18dp">
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline2"
@@ -83,6 +84,7 @@
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -98,19 +100,18 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_marginTop="24dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv"
-                    tools:listitem="@layout/chapter_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/chapter_item" />
 
             </RelativeLayout>
-
 
         </LinearLayout>
 
