--- a/app/src/main/res/layout/fragment_meditation.xml
+++ b/app/src/main/res/layout/fragment_meditation.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/containerMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_black"
@@ -10,24 +12,59 @@
     android:orientation="horizontal"
     tools:context=".presentation.fragments.MeditationFragment">
 
-    <TextView
-        android:id="@+id/minuteTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="18"
-        android:textSize="80sp" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=":"
-        android:textSize="80sp" />
+        <TextView
+            android:id="@+id/minuteTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/droid_sans_mono"
+            android:text="18"
+            android:textColor="@color/to_right_color"
+            android:textSize="80sp" />
 
-    <TextView
-        android:id="@+id/secondTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="29"
-        android:textSize="80sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textColor="@color/to_right_color"
+            android:textSize="80sp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/secondTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/droid_sans_mono"
+            android:text="29"
+            android:textColor="@color/to_right_color"
+            android:textSize="80sp" />
+    </LinearLayout>
+
+
+    <com.scwang.wave.MultiWaveHeader
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:scaleY="-1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:mwhCloseColor="#3F51B5"
+        app:mwhStartColor="#877171"
+        app:mwhVelocity="5" />
+
+    <com.scwang.wave.MultiWaveHeader
+        android:id="@+id/multiWaveHeader"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:mwhCloseColor="#3F51B5"
+        app:mwhStartColor="#877171"
+        app:mwhVelocity="5" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
