--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/alfa_slab_one</item>
         <item>@font/archivo_black</item>
+        <item>@font/droid_sans_mono</item>
+        <item>@font/holtwood_one_sc</item>
         <item>@font/salsa</item>
     </array>
 </resources>
