--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_black"
+    android:background="@color/myWhite"
     android:orientation="vertical"
     tools:context=".presentation.fragments.StatisticFragment">
 
@@ -16,10 +16,18 @@
         android:overScrollMode="never"
         android:scrollbars="none">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+<!--            <ImageView-->
+<!--                android:layout_width="32dp"-->
+<!--                android:layout_height="32dp"-->
+<!--                android:layout_margin="12dp"-->
+<!--                android:src="@drawable/ic_baseline_chevron_left_24"-->
+<!--                app:tint="@color/to_right_color" />-->
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -29,6 +37,7 @@
                     android:id="@+id/chartView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:padding="24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
