--- a/app/src/main/res/layout/fragment_achievements.xml
+++ b/app/src/main/res/layout/fragment_achievements.xml
@@ -15,14 +15,14 @@
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:scrollbars="none"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:scrollbars="none">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -85,7 +85,6 @@
         </LinearLayout>
 
     </ScrollView>
-
 
 
 </RelativeLayout>
