--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -69,6 +69,15 @@
                     app:trackColor="#E3DDDD"
                     app:track_width="26dp" />
 
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="6dp"
+                    android:src="@drawable/ic_baseline_menu_book_24"
+                    app:layout_constraintEnd_toEndOf="@+id/tv1"
+                    app:layout_constraintStart_toStartOf="@+id/tv1"
+                    app:layout_constraintTop_toBottomOf="@+id/tv1"
+                    app:tint="@color/to_right_color" />
                 <TextView
                     android:id="@+id/tv1"
                     android:layout_width="wrap_content"
