--- a/app/src/main/res/layout/activity_data_importing.xml
+++ b/app/src/main/res/layout/activity_data_importing.xml
@@ -13,18 +13,6 @@
         android:background="@color/myWhite"
         android:backgroundTint="@color/myWhite">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/start"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginBottom="48dp"
-            android:background="@drawable/item_style"
-            android:text="@string/start" />
 
         <TextView
             android:id="@+id/tv"
@@ -36,7 +24,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:text="Внедряйте данные из облака."
+            android:text="Обменяйте монеты на новые статьи"
             android:textColor="@color/to_right_color"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -86,27 +74,102 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/cloudImg"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_cloud2"
-            app:tint="#656A70" />
-
-
-        <com.github.ybq.android.spinkit.SpinKitView
-            android:id="@+id/progressView"
-            style="@style/SpinKitView.Large.WanderingCubes"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_below="@+id/cloudImg"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="24dp"
-            android:indeterminate="true"
-            app:SpinKit_Color="@color/to_right_color" />
+        <!--        <ImageView-->
+        <!--            android:id="@+id/cloudImg"-->
+        <!--            android:layout_width="180dp"-->
+        <!--            android:layout_height="180dp"-->
+        <!--            android:layout_centerInParent="true"-->
+        <!--            android:src="@drawable/ic_shop2"-->
+        <!--            app:tint="@color/light_color" />-->
 
     </RelativeLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/editTextCount"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/edit_text_style_2"
+            android:hint="Количетство статьей..."
+            android:inputType="number"
+            android:maxLength="10"
+            android:maxLines="1"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textColorHint="@color/hint_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/gid2"
+            app:layout_constraintWidth_percent="0.85" />
+
+        <com.skydoves.elasticviews.ElasticImageView
+            android:id="@+id/elasticImageView"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_coin"
+            app:layout_constraintEnd_toEndOf="@+id/editTextCount"
+            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
+
+        <TextView
+            android:id="@+id/priceTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="123"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/elasticImageView"
+            app:layout_constraintEnd_toStartOf="@+id/elasticImageView"
+            app:layout_constraintTop_toTopOf="@+id/elasticImageView" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="24dp"
+            android:background="@drawable/clear_item"
+            android:text="@string/exchange"
+            app:layout_constraintBottom_toTopOf="@+id/gid1"
+            tools:layout_editor_absoluteX="24dp" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gid1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.75" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/gid2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/progressView"
+            style="@style/SpinKitView.Large.FadingCircle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:indeterminate="true"
+            app:SpinKit_Color="@color/to_right_color"
+            app:layout_constraintEnd_toEndOf="@+id/start"
+            app:layout_constraintStart_toStartOf="@+id/start"
+            app:layout_constraintTop_toBottomOf="@+id/start" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
