--- a/app/src/main/res/layout/activity_data_importing.xml
+++ b/app/src/main/res/layout/activity_data_importing.xml
@@ -74,6 +74,7 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+
         <!--        <ImageView-->
         <!--            android:id="@+id/cloudImg"-->
         <!--            android:layout_width="180dp"-->
@@ -88,15 +89,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/balanceTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="0"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/elasticImageView2"
+            app:layout_constraintEnd_toStartOf="@+id/elasticImageView2"
+            app:layout_constraintTop_toTopOf="@+id/elasticImageView2" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="@string/sum"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/editTextCount"
+            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="@string/balance"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
         <EditText
             android:id="@+id/editTextCount"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/edit_text_style_2"
-            android:hint="Количетство статьей..."
+            android:hint="@string/data_count"
             android:inputType="number"
-            android:maxLength="10"
+            android:maxLength="5"
             android:maxLines="1"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -117,17 +154,28 @@
             app:layout_constraintEnd_toEndOf="@+id/editTextCount"
             app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
 
+        <com.skydoves.elasticviews.ElasticImageView
+            android:id="@+id/elasticImageView2"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_coin"
+            app:layout_constraintEnd_toEndOf="@+id/editTextCount"
+            app:layout_constraintTop_toBottomOf="@+id/elasticImageView" />
+
         <TextView
             android:id="@+id/priceTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/alfa_slab_one"
-            android:text="123"
+            android:text="0"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/elasticImageView"
             app:layout_constraintEnd_toStartOf="@+id/elasticImageView"
             app:layout_constraintTop_toTopOf="@+id/elasticImageView" />
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/start"
@@ -140,6 +188,7 @@
             android:background="@drawable/clear_item"
             android:text="@string/exchange"
             app:layout_constraintBottom_toTopOf="@+id/gid1"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
             tools:layout_editor_absoluteX="24dp" />
 
 
@@ -148,7 +197,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.75" />
+            app:layout_constraintGuide_percent="0.85" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gid2"
@@ -169,6 +218,7 @@
             app:layout_constraintEnd_toEndOf="@+id/start"
             app:layout_constraintStart_toStartOf="@+id/start"
             app:layout_constraintTop_toBottomOf="@+id/start" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
