--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -26,7 +26,8 @@
         android:src="@drawable/ic_baseline_chevron_left_24"
         app:layout_constraintBottom_toTopOf="@+id/guid1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/to_right_color" />
 
     <EditText
         android:id="@+id/titleEditText"
@@ -85,8 +86,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1"
         android:layout_marginEnd="4dp"
+        android:text="1"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
