--- a/app/src/main/res/layout/activity_data_importing.xml
+++ b/app/src/main/res/layout/activity_data_importing.xml
@@ -1,225 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.DataImportingActivity">
+    tools:context=".presentation.activity.DataImportingActivity">
 
-    <RelativeLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pagerImportActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/myWhite"
-        android:backgroundTint="@color/myWhite">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-        <TextView
-            android:id="@+id/tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="52dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:text="Обменяйте монеты на новые статьи"
-            android:textColor="@color/to_right_color"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv"
-            android:layout_alignStart="@+id/tv"
-            android:layout_alignEnd="@+id/tv"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="-20dp"
-            android:text="Просто нажмите на кнопку и подождите."
-            android:textColor="@color/to_right_color"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/tv"
-            app:layout_constraintTop_toBottomOf="@+id/tv" />
-
-        <ImageView
-            android:id="@+id/info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_baseline_help_outline_24"
-            android:textColor="@color/to_right_color"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/info"
-            android:layout_alignBottom="@+id/info"
-            android:layout_marginBottom="0dp"
-            android:layout_toStartOf="@+id/info"
-            android:src="@drawable/ic_baseline_add_circle_outline_24"
-            android:textColor="@color/to_right_color"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-
-        <!--        <ImageView-->
-        <!--            android:id="@+id/cloudImg"-->
-        <!--            android:layout_width="180dp"-->
-        <!--            android:layout_height="180dp"-->
-        <!--            android:layout_centerInParent="true"-->
-        <!--            android:src="@drawable/ic_shop2"-->
-        <!--            app:tint="@color/light_color" />-->
-
-    </RelativeLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/balanceTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="0"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/elasticImageView2"
-            app:layout_constraintEnd_toStartOf="@+id/elasticImageView2"
-            app:layout_constraintTop_toTopOf="@+id/elasticImageView2" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="@string/sum"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/editTextCount"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="@string/balance"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-        <EditText
-            android:id="@+id/editTextCount"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/edit_text_style_2"
-            android:hint="@string/data_count"
-            android:inputType="number"
-            android:maxLength="5"
-            android:maxLines="1"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textColorHint="@color/hint_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/gid2"
-            app:layout_constraintWidth_percent="0.85" />
-
-        <com.skydoves.elasticviews.ElasticImageView
-            android:id="@+id/elasticImageView"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_coin"
-            app:layout_constraintEnd_toEndOf="@+id/editTextCount"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCount" />
-
-        <com.skydoves.elasticviews.ElasticImageView
-            android:id="@+id/elasticImageView2"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_coin"
-            app:layout_constraintEnd_toEndOf="@+id/editTextCount"
-            app:layout_constraintTop_toBottomOf="@+id/elasticImageView" />
-
-        <TextView
-            android:id="@+id/priceTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/alfa_slab_one"
-            android:text="0"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/elasticImageView"
-            app:layout_constraintEnd_toStartOf="@+id/elasticImageView"
-            app:layout_constraintTop_toTopOf="@+id/elasticImageView" />
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/start"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="24dp"
-            android:background="@drawable/clear_item"
-            android:text="@string/exchange"
-            app:layout_constraintBottom_toTopOf="@+id/gid1"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            tools:layout_editor_absoluteX="24dp" />
-
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gid1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.85" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gid2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.4" />
-
-        <com.github.ybq.android.spinkit.SpinKitView
-            android:id="@+id/progressView"
-            style="@style/SpinKitView.Large.FadingCircle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
-            android:indeterminate="true"
-            app:SpinKit_Color="@color/to_right_color"
-            app:layout_constraintEnd_toEndOf="@+id/start"
-            app:layout_constraintStart_toStartOf="@+id/start"
-            app:layout_constraintTop_toBottomOf="@+id/start" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
