--- a/app/src/main/res/layout/mission_item.xml
+++ b/app/src/main/res/layout/mission_item.xml
@@ -1,37 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/containerMain"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_margin="12dp"
-    android:id="@+id/containerMain"
-    android:clickable="true"
-    android:focusable="true"
     android:background="@drawable/clear_item"
-    android:elevation="6dp">
-
-    <!--    <com.moos.library.CircleProgressView-->
-    <!--        android:id="@+id/progress"-->
-    <!--        android:layout_width="90dp"-->
-    <!--        android:layout_height="90dp"-->
-    <!--        android:layout_centerHorizontal="true"-->
-    <!--        android:layout_marginTop="12dp"-->
-    <!--        app:circleBroken="false"-->
-    <!--        app:isTracked="true"-->
-    <!--        app:progressTextVisibility="false"-->
-    <!--        app:start_progress="0"-->
-    <!--        app:track_width="8dp" />-->
+    android:clickable="true"
+    android:elevation="6dp"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="12dp"
-        android:src="@drawable/ic_baseline_headset_24"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_headphones_icon_icons_com_71177"
         app:tint="@color/to_right_color" />
-
 
     <TextView
         android:id="@+id/name"
